--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 
     </div>
 
+    <!-- show book details -->
+    <div id="add-detail" class="container">
+
+    </div>
+
 
     <!-- internal js link -->
     <script src="js/app.js"></script>
