--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1 class="text-center text-muted mt-3 mb-4">Open Liberay project</h1>
+    <h1 class="text-center d-flex justify-content-center text-muted mt-3 mb-4">Open Liberay project</h1>
     <!-- input field -->
     <div class="container w-50 mx-auto">
         <div class="input-group mb-3">
@@ -31,12 +31,12 @@
 
     <!-- error message show div -->
     <div id="error-container" class="container">
-
+        <!-- <h2>Erro messages show div</h2> -->
     </div>
 
     <!-- show book details -->
-    <div id="add-detail" class="container">
 
+    <div id="load-data" class="container row row-cols-1 row-cols-md-3 g-4">
     </div>
 
 
