--- a/index.html
+++ b/index.html
@@ -5,42 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open Liberay project</title>
-    <!-- bootstrap css link -->
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
     </script>
-    <!-- external css link -->
-    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1 class="text-center d-flex justify-content-center text-muted mt-3 mb-4">Open Liberay project</h1>
-    <!-- input field -->
-    <div class="container w-50 mx-auto">
-        <div class="input-group mb-3">
-            <input id="input-field" type="text" class="form-control" placeholder="Please type your book name"
-                aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button onclick="searchBook()" class="btn btn-outline-secondary" type="button"
-                id="button-addon2">Search</button>
+    <h2 class="text-center mb-5">Programming Book project</h2>
+    <div class="input-group mb-3 container w-50">
+        <input id="input-field" type="text" class="form-control" placeholder="Please Type book name"
+            aria-label="Recipient's username" aria-describedby="button-addon2">
+        <button onclick="searchButton()" class="btn btn-outline-secondary" type="button">search</button>
+        </div>
+<!-- total book found -->
+<div id="total-book" class="container text-center">
+
+    </div>
+
+    <!-- load data web site -->
+    <div class="container">
+        <div id="load-data" class="row row-cols-1 row-cols-md-4 g-4">
         </div>
     </div>
-
-    <!-- error message show div -->
-    <div id="error-container" class="container">
-        <!-- <h2>Erro messages show div</h2> -->
-    </div>
-
-    <!-- show book details -->
-
-    <div id="load-data" class="container row row-cols-1 row-cols-md-3 g-4">
-    </div>
-
-
-    <!-- internal js link -->
     <script src="js/app.js"></script>
 </body>
 
