error part is added

--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
         <input id="input-field" type="text" class="form-control" placeholder="Please Type book name"
             aria-label="Recipient's username" aria-describedby="button-addon2">
         <button onclick="searchButton()" class="btn btn-outline-secondary" type="button">search</button>
-        </div>
-<!-- total book found -->
-<div id="total-book" class="container text-center">
+    </div>
+    <!-- error message div -->
+    <div id="error-div" class="container text-center">
+
+    </div>
+
+    <!-- total book found -->
+    <div id="total-book" class="container text-center">
 
     </div>
 
