all code running good at

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <!-- error message div -->
 
     <div class="container text-center">
-        <p id="error-message" class="text-danger">Some error please try again</p>
+        <p id="error-message" class="text-danger">Something error please try again</p>
     </div>
 
     <!-- total book found -->
     <div id="total-book" class="container text-center ">
-
+        <p class="text-center" id="total-result">Total search result found = </p>
     </div>
 
     <!-- load data web site -->
